fix: footer will not have a gap at the bottom

--- a/src/tjenesteomrader/images/footer/footer.module.css
+++ b/src/tjenesteomrader/images/footer/footer.module.css
@@ -1,4 +1,5 @@
 .footer {
   width: 100%;
   height: auto;
+  position: absolute;
 }
